# exv-ecnuvpn

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  README_CN.md  cminst.sh  fix_all.ps1  fix_build.ps1  fix_final.ps1  fix_includes.ps1  fix_remaining.ps1  new_start_point.md  remove_dead_includes.ps1  start.ps1  walkthrough.md
.github/workflows/: build.yml
.reasonix/truncated-results/: 1780852076352-796bdc9e-run_command.txt  1780852084703-42d6792f-run_command.txt  1780852087377-73b630e6-run_command.txt  1780852096057-ef0cb487-run_command.txt  1780852099195-915654d2-run_command.txt  1780852105439-5fb75d11-run_command.txt  1780852111754-fdca5ca6-run_command.txt
bash/: debug-env.sh  initvpn.sh  stopvpn.sh  tunnel.sh
contracts/: system.contract.json
distribution/: ecnu.json
distribution/windows/: exv.nsi
docs/: AGGREGATE_AUTH_EMPTY_RESPONSE_FIX_PLAN.md  ARCHITECTURE_TARGET.md  CI_AND_TEST_HARDENING.md  CI_RELEASE_GATE.md  CORE_RECONNECT_HARDENING.md  CORE_STATE_MACHINE.md  CREDENTIAL_STORE_AND_SECRET_MIGRATION.md  DESKTOP_RPC_CONTRACT_V2.md  DESKTOP_RPC_V2.md  EXV_DOCTOR_DESIGN.md  HELPER_PROTOCOL.md  HELPER_PROTOCOL_V2.md  INTERFACE_CHANGELOG.md  MACOS_NETWORK_EXTENSION_EVALUATION.md  PHASE7_FINAL_REPORT.md  PHASE_4_6_HARDENING_REPORT.md  PROJECT_CURRENT_ARCHITECTURE.md  REGRESSION_MATRIX.md  SECURITY_PHASE7_CLOSURE.md  WINDOWS_PHASE7_VALIDATION.md  agent_rules.md  build_guide.md  code_guide.md  cross-platform-roadmap.md  runtime-assets.md  user_guide.md  windows-electron-helper-recovery.md
docs/architecture/: 00-constitution.md  10-requirements.md  20-tasks.md  dataplane-forwarding-2026-05-31.md  guardrail_allowlist.yml  native-anyconnect-clean-room-spec.md  native-anyconnect-protocol-requirements.md  new_start_point.md
docs/handoffs/: 2026-06-18-webview-window-size-task2-handoff.md  2026-06-18-webview-window-size-tray-icon-complete-handoff.md  native-anyconnect-v2-live-validation-template.md
docs/merge-playbooks/: contract-freeze-s1.md  g1.3-desktop-contract-audit.md  g3-macos-validation.md  windows-macos-merge.md
docs/validation/: macos-native-route-crash-cleanup.md  native-production-release-readiness-2026-05-31.md
include/: httplib.h
runtime/: README.md
scripts/: accept-webview-shell-linux.sh  accept-webview-shell-macos.sh  accept-webview-shell-windows.ps1  architecture-guardrails.ps1  architecture-guardrails.sh  build-linux.sh  build-macos.sh  build-windows.ps1  clear-local-user-config.ps1  diagnose-mingw-dlls.ps1  embed_assets.py  generate_contracts.py  generate_distribution_config.py  install-linux.sh  install-windows.bat  macos-packaging-smoke.sh  manual-phase7-vpn-verification.ps1  package-windows-release.ps1  package_ui_shell.py  packaging-smoke.ps1  packaging-smoke.sh  restart-debug-electron.ps1  run-tests.ps1  run-tests.sh  stage-openconnect-runtime-mac.sh  stage-openconnect-runtime-win.ps1  start-common.ps1  start-privileged-maintenance.ps1  start-privileged-webview-shell.ps1  validate-merge-prep-macos.sh  validate-merge-prep-windows.ps1  windows-packaging-smoke.ps1
src/: app_api.cpp  app_api.hpp  app_api_native_orchestration.cpp  app_api_native_orchestration.hpp  config.cpp  config.hpp  config_api.cpp  config_api.hpp  config_manager.cpp  config_manager.hpp  connection_attempt.cpp  connection_attempt.hpp  crypto.cpp  crypto.hpp  error_types.hpp  helper.cpp  helper.hpp  helper_daemon_linux.cpp  helper_daemon_mac.cpp  helper_daemon_win.cpp  helper_internal.hpp  helper_ipc.hpp  helper_main.cpp  helper_service_win.cpp  helper_v2_handler.cpp  helper_v2_handler.hpp  log_event_bus.cpp  log_event_bus.hpp  log_renderer.cpp  log_renderer.hpp  logger.cpp  logger.hpp  main.cpp  openconnect_log.cpp  sse_broadcaster.cpp  sse_broadcaster.hpp  tunnel.cpp  tunnel.hpp  utils.cpp  utils.hpp  (+17 more)
src/app/: main.cpp
src/cli/: cli_commands.cpp  cli_commands.hpp  cli_entrypoint.cpp  cli_entrypoint.hpp  cli_main.cpp  console.cpp  console.hpp  core_request_formatter.cpp  core_request_formatter.hpp  pipe_client.cpp  pipe_client.hpp
src/core/: core_error_mapper.cpp  core_error_mapper.hpp  core_process.cpp  core_process.hpp  core_session_runner.cpp  core_session_runner.hpp  engine_event_bridge.cpp  engine_event_bridge.hpp  native_startup_failure.hpp  pipe_ipc.cpp  pipe_ipc.hpp  reconnect_policy.hpp  timer_scheduler.hpp  timing.cpp  timing.hpp  tunnel_controller.cpp  tunnel_controller.hpp  tunnel_events.hpp  tunnel_intent.hpp  tunnel_state.hpp
src/core_api/: app_rpc_dispatcher.cpp  app_rpc_dispatcher.hpp  config_actions.cpp  config_actions.hpp  core_api_setup.cpp  core_api_setup.hpp  (+8 more)
tests/: app_api_logs_test.cpp  app_api_native_orchestration_test.cpp  app_api_rpc_dispatcher_test.cpp  app_api_runtime_policy_test.cpp  app_api_status_contract_test.cpp  auth_interaction_coordinator_test.cpp  backend_resolver_test.cpp  base_module_smoke_test.cpp  base_observability_architecture_test.cpp  cli_commands_test.cpp  config_initialization_test.cpp  config_module_smoke_test.cpp  connect_intent_test.cpp  connect_pipeline_test.cpp  connection_attempt_test.cpp  contract_manifest_test.cpp  core_architecture_contract_test.cpp  core_error_mapper_test.cpp  core_lifecycle_registry_test.cpp  core_process_lifecycle_test.cpp  core_process_test.cpp  core_resolver_test.cpp  core_rpc_lane_scheduler_test.cpp  core_session_runner_test.cpp  credential_store_model_test.cpp  crypto_roundtrip_test.cpp  darwin_native_packet_device_test.cpp  darwin_native_route_config_test.cpp  darwin_native_tls_stream_test.cpp  darwin_native_utun_test.cpp  darwin_platform_network_ops_test.cpp  darwin_wkwebview_runtime_test.cpp  desktop_status_presenter_test.cpp  engine_event_bridge_test.cpp  feedback_test.cpp  helper_cleanup_registry_test.cpp  helper_contract_test.cpp  helper_delegating_network_ops_test.cpp  helper_lease_manager_test.cpp  helper_messages_connector_test.cpp  (+65 more)
webui/: .gitignore  README.md  electron-builder.config.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.electron.json  tsconfig.host.json  vite.config.ts
(+774 files in other folders)
